# internal/handler/handler.go
@@ -18,37 +18,17 @@ type Handler interface {
 	VerifyRegister(c *gin.Context)
 	VerifyUser(c *gin.Context)
 	GetCartInfo(c *gin.Context)
-	GetPoints(c *gin.Context)
 	UpdateCart(c *gin.Context)
-	UpdatePoints(c *gin.Context)
 	Appeal(c *gin.Context)
 	GetProfileInfo(c *gin.Context)
 	EditProfileEmail(c *gin.Context)
 	EditProfileLogin(c *gin.Context)
+	GetAllProducts(c *gin.Context)
+	PlaceAnOrder(c *gin.Context)
 }
 
 type handler struct {
 	service service.Service
-}
-
-func (h *handler) GetCartInfo(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
-}
-
-func (h *handler) GetPoints(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
-}
-
-func (h *handler) UpdateCart(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
-}
-
-func (h *handler) UpdatePoints(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
 }
 
 func NewHandler(service service.Service) Handler {
